KUrlCompletion: Disregard the trailing slash when sorting directory paths

BUG: 442717